@@ -1,5 +1,10 @@
 
-2008-01-05
+2009-01-31
+
+   * [FEATURE]  LaTeX Export now uses the title property of a definition to 
+                set more readable titles in the glossary
+
+2009-01-05
 
    * [FEATURE]  Added Debug Mode for extra output, and template reloading
    * [BUG]      LaTeX Export Whitespace fixes
